add docs and fix reponse
